Fix left and right links not showing up when rsizd

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -4,10 +4,14 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  gap:9px
+ 
+
+  
 }
 
 .logo {
-  font-size: 80px;
+  font-size: 90px;
   font-weight: 900;
   color: tomato;
   background: white;
@@ -19,16 +23,22 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
- justify-content: space-evenly;
- gap: 8px;
- padding: 89px;
+gap: 10px;
+padding: 80px;
+
+
+
+
 
 }
 
 .right-links {
   display: flex;
   flex-flow: row wrap;
-  align-self: 
+  
+  
+  
+ 
 
 
 
@@ -37,8 +47,9 @@ ul {
 .left-links {
   display: flex;
   flex-flow: row wrap;
+  justify-content:left
   
-  flex-direction: row-reverse;
+ 
   
   
 
@@ -53,4 +64,5 @@ a {
 
   /* this removes the line under the links */
   text-decoration: none;
+  
 }
